2007-Oct-26  Heikki Junnila <hjunnila@users.sf.net>
	* Optimized Monitor so that it reads only the visible range of values.

2007-Oct-26  Heikki Junnila <hjunnila@users.sf.net>
	* FixtureConsole resizes itself a bit taller.

2007-Oct-25  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed VCSliderProperties' slider naming in bus mode: setting a name
	  in bus mode is not possible.

2007-Oct-25  Heikki Junnila <hjunnila@users.sf.net>
	* Changed VCButton to inherit VCWidget
	* Added a function attaching menu item to VCButton's widget menu.
	* Moved the text drawing routine from VCLabel to VCWidget so that
	  everyone can draw their text if they want to.
	* Made a custom paintEvent() handler for VCSlider because it doesn't
	  want to draw text into its background.
	* Moved everything from VCXYPad::init() to its constructor.
	* Fixed renaming for VCWidget to accept also empty strings.
	* Fixed VCSlider::setCaption() to also set the text to the tap button.
	* TODO: VCSliderProperties still behaves in a weird way with buses,
	  since the slider's name should always reflect the bus name...

2007-Oct-24  Heikki Junnila <hjunnila@users.sf.net>
	* Changed VCButton's default name to "" instead of QString::null as
	  an empty string will show up nicer e.g. in its destroy dialog.
	* Created a cut/copy/paste scheme to virtual console, but VCButton
	  needs to be converted into a VCWidget-derivative first so that
	  all widgets can use the clipboard.  So this is just a for-now-commit.

2007-Oct-24  Heikki Junnila <hjunnila@users.sf.net>
	* Updated some compilation requirements to README
	* Fixed VC widgets' tendency to crash when they were destroyed thru
	  the widgets' own menus. One must NOT put "this" as the menu parent.

2007-Oct-22  Heikki Junnila <hjunnila@users.sf.net>
	* Changed App::modeChanged() to include the new mode as its parameter
	* Changed all respective slots regarding App::modeChanged signal
	* Moved blackout stuff from App to DMXMap